--- a/3/Tasks_3.ipynb
+++ b/3/Tasks_3.ipynb
@@ -296,7 +296,7 @@
     "expr_6 = (x**3 + 5*x**2 - 3*x - 15) * sympy.ln(x**2 - 3) / (x**2 - 3*x + 2)\n",
     "\n",
     "# We can just write:\n",
-    "# solveset(expr_6, x))\n",
+    "# solveset(expr_6, x)\n",
     "\n",
     "print(\"Solutions of the equation:\")\n",
     "for solution in solve(expr_6, x):\n",
