--- a/7/Tasks_7.ipynb
+++ b/7/Tasks_7.ipynb
@@ -2030,11 +2030,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "425e6e564a40dbe62e7e4186601ed0b5ee2802309dcd5b8a3bfeeec5a9015a7b"
+    "hash": "71eaa566fe385e36f6a17cd041d95c99303ead46f5ef158c51eb2173e206bc3f"
    }
   }
  },
