--- a/8/Tasks_8.ipynb
+++ b/8/Tasks_8.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "tx6HFrqHw9CQ"
       },
@@ -71,18 +71,22 @@
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/latex": "y'_x = \\frac{\\cos{\\left(t \\right)}}{\\sin{\\left(t \\right)}}"
+            "text/latex": [
+              "y'_x = \\frac{\\cos{\\left(t \\right)}}{\\sin{\\left(t \\right)}}"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/latex": "y''_{xx} = \\frac{t \\left(- t \\sin{\\left(t \\right)} + \\cos{\\left(t \\right)}\\right) \\sin{\\left(t \\right)} - t \\left(t \\cos{\\left(t \\right)} + \\sin{\\left(t \\right)}\\right) \\cos{\\left(t \\right)}}{t^{3} \\sin^{3}{\\left(t \\right)}}"
+            "text/latex": [
+              "y''_{xx} = \\frac{t \\left(- t \\sin{\\left(t \\right)} + \\cos{\\left(t \\right)}\\right) \\sin{\\left(t \\right)} - t \\left(t \\cos{\\left(t \\right)} + \\sin{\\left(t \\right)}\\right) \\cos{\\left(t \\right)}}{t^{3} \\sin^{3}{\\left(t \\right)}}"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -136,115 +140,135 @@
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "y'_{x} = \\frac{2 t + 2}{2 t - 2}"
+            ],
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ],
-            "text/latex": "y'_{x} = \\frac{2 t + 2}{2 t - 2}"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "\\text{Нули производной 1 порядка:}"
+            ],
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ],
-            "text/latex": "\\text{Нули производной 1 порядка:}"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "$\\displaystyle -1$"
+            ],
             "text/plain": [
               "-1"
-            ],
-            "text/latex": "$\\displaystyle -1$"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "\\text{Точки, в которых функция не существует:}"
+            ],
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ],
-            "text/latex": "\\text{Точки, в которых функция не существует:}"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "$\\displaystyle 1$"
+            ],
             "text/plain": [
               "1"
-            ],
-            "text/latex": "$\\displaystyle 1$"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n"
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "y''_{xx} = - \\frac{8}{\\left(2 t - 2\\right)^{3}}"
+            ],
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ],
-            "text/latex": "y''_{xx} = - \\frac{8}{\\left(2 t - 2\\right)^{3}}"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "\\text{Нули производной 2 порядка:}"
+            ],
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ],
-            "text/latex": "\\text{Нули производной 2 порядка:}"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "\\text{{Производная не обращается в ноль}}"
+            ],
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ],
-            "text/latex": "\\text{{Производная не обращается в ноль}}"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "\\text{Точки, в которых функция не существует:}"
+            ],
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ],
-            "text/latex": "\\text{Точки, в которых функция не существует:}"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "$\\displaystyle 1$"
+            ],
             "text/plain": [
               "1"
-            ],
-            "text/latex": "$\\displaystyle 1$"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n"
           ]
@@ -313,44 +337,52 @@
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "\\text{Точки экстремума }y_x:"
+            ],
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ],
-            "text/latex": "\\text{Точки экстремума }y_x:"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "$\\displaystyle -1$"
+            ],
             "text/plain": [
               "-1"
-            ],
-            "text/latex": "$\\displaystyle -1$"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "\\text{Точки перегиба }y_x:"
+            ],
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ],
-            "text/latex": "\\text{Точки перегиба }y_x:"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "\\text{Функция не меняет кривизну}"
+            ],
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ],
-            "text/latex": "\\text{Функция не меняет кривизну}"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -415,24 +447,28 @@
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "\\text{Точки перегиба }y_x:"
+            ],
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ],
-            "text/latex": "\\text{Точки перегиба }y_x:"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/latex": [
+              "$\\displaystyle - \\frac{3}{2}$"
+            ],
             "text/plain": [
               "-3/2"
-            ],
-            "text/latex": "$\\displaystyle - \\frac{3}{2}$"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -490,16 +526,98 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Вариант 50\n",
+        "$$\n",
+        "x = 2e^t+ 2e^{−t}\\\\\n",
+        "y = 5e^t−5e^{−t}\n",
+        "$$"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "QGJAJR4qw9CZ"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/latex": [
+              "\\lim_{t\\to +\\infty} x_t = \\infty"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/latex": [
+              "\\lim_{t\\to +\\infty} y_t = \\infty"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/latex": [
+              "\\lim_{t\\to -\\infty} x_t = \\infty"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/latex": [
+              "\\lim_{t\\to -\\infty} y_t = -\\infty"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "def task5() -> None:\n",
+        "    t = Symbol('t')\n",
+        "    x = 2*sympy.exp(t) + 2*sympy.exp(-t)\n",
+        "    y = 5*sympy.exp(t) - 5*sympy.exp(-t)\n",
+        "\n",
+        "    x_t_pos_lim = limit(e=x, z=t, z0=sympy.S.Infinity)\n",
+        "    display(Latex(fr\"\\lim_{{t\\to +\\infty}} x_t = {latex(x_t_pos_lim)}\"))\n",
+        "    y_t_pos_lim = limit(e=y, z=t, z0=sympy.S.Infinity)\n",
+        "    display(Latex(fr\"\\lim_{{t\\to +\\infty}} y_t = {latex(y_t_pos_lim)}\"))\n",
+        "\n",
+        "    x_t_neg_lim = limit(e=x, z=t, z0=sympy.S.NegativeInfinity)\n",
+        "    display(Latex(fr\"\\lim_{{t\\to -\\infty}} x_t = {latex(x_t_neg_lim)}\"))\n",
+        "    y_t_neg_lim = limit(e=y, z=t, z0=sympy.S.NegativeInfinity)\n",
+        "    display(Latex(fr\"\\lim_{{t\\to -\\infty}} y_t = {latex(y_t_neg_lim)}\"))\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    task5()"
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": ".venv",
       "language": "python",
@@ -515,15 +633,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.0"
+      "version": "3.10.6"
     },
     "vscode": {
       "interpreter": {
-        "hash": "71eaa566fe385e36f6a17cd041d95c99303ead46f5ef158c51eb2173e206bc3f"
+        "hash": "425e6e564a40dbe62e7e4186601ed0b5ee2802309dcd5b8a3bfeeec5a9015a7b"
       }
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
