update display_with_text function

--- a/15/Tasks_15.ipynb
+++ b/15/Tasks_15.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import overload, Callable, Union, Optional, List\n",
+    "from typing import overload, Callable, Optional, Tuple, Any\n",
     "\n",
     "from sympy import latex\n",
     "from sympy.core._print_helpers import Printable\n",
@@ -20,26 +20,26 @@
     "    ...\n",
     "\n",
     "@overload\n",
-    "def display_with_text(text: Optional[str] = None, expression: Optional[Union[str, Printable]] = None) -> None:\n",
+    "def display_with_text(text: Optional[str] = None, expression: Optional[Any] = None) -> None:\n",
     "    ...\n",
     "\n",
     "@overload\n",
-    "def display_with_text(text: Optional[str] = None, *expressions: Union[str, Printable]) -> None:\n",
+    "def display_with_text(text: Optional[str] = None, *expressions: Any) -> None:\n",
     "    ...\n",
     "\n",
     "def display_with_text(*args, **kwargs) -> None:\n",
     "    text: Optional[str] = kwargs.get(\"text\", None)\n",
-    "    expression: Optional[Union[str, Printable]] = kwargs.get(\"expression\", None)\n",
+    "    expression: Optional[Any] = kwargs.get(\"expression\", None)\n",
     "\n",
     "    if text is None and args:\n",
-    "        text = args[0]\n",
+    "        text = str(args[0])\n",
     "    \n",
-    "    expressions: List[Union[str, Printable]] = \\\n",
-    "        [expr for expr in args[1:] if isinstance(expr, (str, Printable))] \\\n",
-    "        if len(args) > 1 else []\n",
-    "\n",
+    "    if text is not None and not isinstance(text, str):\n",
+    "        text = str(text)\n",
+    "    \n",
+    "    expressions: Tuple[Any] = args[1:]\n",
     "    if expression is not None:\n",
-    "        expressions.append(expression)\n",
+    "        expressions += (expression,)\n",
     "\n",
     "    if not expressions:\n",
     "        if text is not None:\n",
@@ -47,9 +47,9 @@
     "            display(Latex(text))\n",
     "        return\n",
     "    \n",
-    "    verifier: Callable[[Union[str, Printable]], str] = \\\n",
-    "        lambda expr: expr if isinstance(expr, str) else str(latex(expr))\n",
-    "    final_expression: str = r\"\\\\\".join(map(verifier, expressions))\n",
+    "    expr_processor: Callable[[Any], str] = \\\n",
+    "        lambda expr: str(latex(expr) if isinstance(expr, Printable) else expr)\n",
+    "    final_expression: str = r\"\\\\\".join(map(expr_processor, expressions))\n",
     "    \n",
     "    if VS_CODE:\n",
     "        final_expression = \"$ \" + final_expression + \" $\"\n",
