--- a/16/Tasks_16.ipynb
+++ b/16/Tasks_16.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 28,
       "metadata": {
         "id": "LX8odg0ygM6F"
       },
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 30,
       "metadata": {
         "id": "3BU6D46PgM6L"
       },
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 31,
       "metadata": {
         "id": "BClXAUZ6gM6M"
       },
@@ -210,7 +210,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "15e4bee0d4424d79bb0e94b98efeea39",
+              "model_id": "7029e8991cb748798ae6b55af2ed4fee",
               "version_major": 2,
               "version_minor": 0
             },
@@ -279,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 32,
       "metadata": {
         "id": "SeL6tDMdgM6O"
       },
@@ -312,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 33,
       "metadata": {
         "id": "cQ2UQFAUgM6O",
         "outputId": "baf538a0-4daf-4fd1-fa65-d41049891fdb"
@@ -368,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 34,
       "metadata": {
         "id": "gR50NDCWgM6P",
         "outputId": "f1cc1adb-47c7-47f4-c8d6-10337509b248"
@@ -377,7 +377,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "a88e857bae94452483570b0087462a05",
+              "model_id": "bb939e34330543aeaeccaa60065429e5",
               "version_major": 2,
               "version_minor": 0
             },
@@ -402,10 +402,10 @@
         {
           "data": {
             "text/plain": [
-              "<sympy.plotting.plot.Plot at 0x14ef18eb590>"
+              "<sympy.plotting.plot.Plot at 0x14ef299b550>"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -437,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 35,
       "metadata": {
         "id": "kHISukmQgM6Q",
         "outputId": "a033d09d-d545-408a-c8d0-916d7ac7611d"
@@ -470,7 +470,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "8fb3e7b7e5984a8ba82cc797329ba940",
+              "model_id": "dc00d6979324481ba9941b2b875ac7cb",
               "version_major": 2,
               "version_minor": 0
             },
